# virtual-filesystem

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.circleci/: config.yml
example/virtual-filesystem-wasm/: Cargo.toml  README.md
example/virtual-filesystem-wasm/benches/: bench.rs
example/virtual-filesystem-wasm/src/: lib.rs
example/virtual-filesystem-wasm/tests/: web.rs
example/virtual-filesystem-wasm/www/: index.html  index.js  package.json  webpack.config.js
examples/wasm/: Cargo.toml  LICENSE  README.md
examples/wasm/src/: lib.rs
examples/wasm/tests/: web.rs
examples/wasm/www/: LICENSE-APACHE  LICENSE-MIT  index.html  package-lock.json
src/: command.rs  filesystem.rs  graph.rs  lib.rs  main.rs  shell.rs
src/interpreter/: ast.rs  common.rs  interpreter.rs  machine.rs  mod.rs  operator.rs  stackmachine.rs  token.rs
src/shell/: shell.rs
src/utils/: logger.rs
src/virtual_filesystem/: command.rs  mod.rs  shell.rs
src/virtual_filesystem_core/: filesystem.rs  graph.rs  logger.rs  mod.rs
