[package]
name = "virtual-filesystem-wasm"
version = "0.1.0"
authors = ["Aofusa <5000enPCinAOFUSA@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
virtual-filesystem = { path = "../.." }
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]


[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
#opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
